@@ -125,15 +125,15 @@ message:
       pvp-attacker: '&8[&aLands&8] &cYou''re not allowed to attack players here.'
       pvp-target: '&8[&aLands&8] &cYour target isn''t allowed to attack players here.'
   event:
-    land:
-      enter: '#t#&a&l{land};;{title}'
-      leave: '#t#&2&lWilderness;;&7Feel the wild.'
-    safezone:
-      enter: '#t#&e&l{land};;{title}'
-      leave: '#t#&2&lWilderness;;&7Feel the wild.'
+    lands:
+      enter: '#t#&a&l{land}{newline}{title}'
+      leave: '#t#&2&lWilderness{newline}&7Feel the wild.'
+    safezones:
+      enter: '#t#&e&l{land}{newline}{title}'
+      leave: '#t#&2&lWilderness{newline}&7Feel the wild.'
     fly:
       warning: '&8[&aLands&8] &7You''re not allowed to fly here. Flight mode will be disabled in a few seconds. Bypass permission:&b {permission}'
-      count: '#t#&cFly mode disabling in;;&e{sec} &csecond(s)'
+      count: '#t#&c&lFly disabling{newline}&e&lin {sec} &c&lsecond(s)'
       disabled: '&8[&aLands&8] &cYour fly mode was disabled. &7You''re not allowed to fly here.'
       disallowed: '&8[&aLands&8] &cYou''re not allowed to fly in this land. &7Contact the land owner. Bypass permission: &blands.bypass.fly'
       disallowed-wilderness: '&8[&aLands&8] &cYou''re not allowed to fly in wilderness. &7Bypass permission: &blands.bypass.wilderness.fly'
@@ -155,13 +155,13 @@ message:
     started: '&8[&aLands&8] &7Successful started auto action. Name:&b {name}'
     removed: '&8[&aLands&8] &7Successful stopped auto action. &7Name:&b {name}'
   gui:
-    chat:
-      title: '#t#!!1!!4!!2!!&e&lEnter new Title;;&e&lin Chat.'
-      title-done: '#t#&2&lSuccessful set;;&2&lLand Title.'
-      name: '#t#!!1!!4!!2!!&e&lEnter new Name;;&e&lin Chat.'
-      name-done: '#t#&2&lSuccessful set;;&2&lLand Name.'
+    chats:
+      title: '#t#&e&lEnter new{newline}&e&lTitle in Chat'
+      title-done: '#t#&a&lSuccessful set{newline}&7&lLand Title.'
+      name: '#t#&e&lEnter new{newline}&e&lName in Chat'
+      name-done: '#t#&2&lSuccessful set{newline}&7&lLand Name'
       cancel: '&8[&aLands&8] &7Type &bcancel &7in chat to cancel this action.'
-      cancelled: '#t#&c&lCancelled;;&c&lChat Action.'
+      cancelled: '#t#&c&lCancelled{newline}&c&lChat Action'
 command:
   general:
     land-not-exist: '&8[&aLands&8] &cThe land&e {land} &cdoesn''t exist. &7There''s no land with the name&b {land} &7in this world.'
@@ -202,10 +202,11 @@ command:
     success: '&8[&aLands&8] &7You entered edit mode for this land &8(&7Land:&e {land}&8)&7. Next actions, like &8/&aLands claim &7or &8/&aLands trust&7, will be executed for this land.'
   selection:
     disabled-config: '&8[&aLands&8] &cThis feature was disabled in config by an administrator. &7You need to enable setting &bland.selection.enabled&7.'
-    enabled: '&8[&aLands&8] &7Selection mode enabled: Select just with your hands &bboth corners &7of the region to &bclaim all chunks &7in it.'
-    disabled: '#t#!!1!!1!!1!!&7Selection:;;&cDisabled'
-    pos-left: '#t#&7Position;;&b1'
-    pos-right: '#t#&7Position;;&b2'
+    enabled: '&8[&aLands&8] &7Selection mode enabled: Select just with your hands &bboth corners &7of the region to do actions like &bclaim, trust, untrust etc. &7with it.'
+    disableds: '#t#&c&lSelection{newline}&c&lMode disabled'
+    pos:
+      left: '#t#&a&lPosition{newline}&b&l1 &7&lset'
+      right: '#t#&a&lPosition{newline}&b&l2 &7&lset'
     cancelled: '&8[&aLands&8] &cThe selection was cancelled by a other plugin! &7It seems like you don''t have access to the clicked block. Please check for any protection plugin regions.'
     max: '&8[&aLands&8] &cYour selection has to many chunks in it. &7Size:&b {current} &7Your allowed size:&b {max} &7Permission: &blands.selection.NUMBER'
     same-world: '&8[&aLands&8] &cBoth positions must be in the same world.'
@@ -280,13 +281,13 @@ command:
     success: '&8[&aLands&8] &7Successful teleported to chunk &8(&7X:&e {x} &7Z:&e {z} &7Claimed: {claimed}&8)&7.'
   setSpawn:
     force-land: '&8[&aLands&8] &cYou only can set the land spawn on your land. &7Go to your land&b {land} &7first.'
-    success: '#t#&7Land spawn &aset&7.;;&7Cost:&b ${cost}'
+    successs: '#t#&a&lSpawn set{newline}&7&lCost:&b&l ${cost}'
   spawn:
     not-exist: '&8[&aLands&8] &cThere''s no spawn set for land&e {land}&c. &7Someone needs to set it first by executing &8/&aLand setSpawn&7.'
     not-allowed: '&8[&aLands&8] &cYou''re not allowed to teleport to the spawn of this land. &7The owner needs to give you permission to do so. Contact him for assistance &8(&7Land:&e {land}&8)&7.'
-    success: '#t#&7Teleported to;;&7land&b {land}'
+    successs: '#t#&9&lTeleported{newline}&9&lLand&7&l {land}'
   wild:
-    searching: '#t#&7Searching:;;&dRandom location'
+    searchingg: '#t#&9&lSearching{newline}&7&lRandom Location'
     loc-unsafe: '&8[&aLands&8] &cCouldn''t find a safe location for you. &7Please try again later. If that doesn''t help, contact an administrator.'
     success: '&8[&aLands&8] &7You were random teleported &8(&7X:&e {x} &7Z:&e {z}&8)&7. You payed&b ${cost}&7.'
   deposit:
