@@ -1,1 +1,4 @@
-# ADDED /Lands reload reloads now tasks and events
+# ADDED {newline} placeholder to default translation
+# FIXED Titles not displaying correctly with default translation
+# FIXED Missing placeholder {setting}
+# FIXED /Lands view no color
